# session-meetings

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: cd.yml  ci.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 001_create_users.sql  002_create_meetings.sql  003_create_invitations.sql
backend/src/: config.rs  db.rs  errors.rs  main.rs
backend/src/handlers/: auth.rs  invitations.rs  meetings.rs  mod.rs
backend/src/middleware/: auth.rs
backend/src/models/: invitation.rs  meeting.rs  mod.rs  user.rs
backend/src/services/: invite.rs  jwt.rs  mod.rs
frontend/: Dockerfile  eslint.config.mjs  nuxt.config.ts  package-lock.json  package.json  tsconfig.json
frontend/components/: InviteLink.vue  JitsiMeet.vue  MeetingCard.vue
frontend/composables/: useApi.ts  useAuth.ts
frontend/middleware/: auth.global.ts
frontend/pages/: dashboard.vue  index.vue  login.vue  register.vue
frontend/pages/join/: [token].vue
frontend/pages/meeting/: [room].vue
frontend/plugins/: api.ts
frontend/scripts/: check-no-js.mjs
frontend/stores/: auth.ts
frontend/types/: jitsi.d.ts
jitsi/: docker-compose.yml  setup.sh
